--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -43,7 +43,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum £10.</strong></p>
   </section>
   <section id="images">
     <img src="rsc/pedroarilla-mestre-1.jpg">
@@ -67,7 +67,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum £10.</strong></p>
   </section>
   <section class="data" id="the-end">
     <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
