--- a/reading/index.html
+++ b/reading/index.html
@@ -35,6 +35,14 @@
     💕 means I re-read this book — so probably FUCKING WOW.
     </p>
   </section>
+  <section class="data" id="books-2020">
+    <h2>2020</h2>
+    <ul>
+      <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
+      <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
+      <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
+    </ul>
+  </section>
   <section class="data" id="books-2019">
     <h2>2019</h2>
     <ul>
