--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
   </section>
   <section class="presentation" style="padding-bottom:0">
       <h1><strong>Coding</strong></h1>
-      <p>A Pomodoro timer written in Python<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/pomothon" target="_blank">GitHub repository</a></p>
+      <p>A Pomodoro tracker written in Python<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/pomothon" target="_blank">GitHub repository</a></p>
       <p>Workflow to set up and update scripts repositories for Glyphs app<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/update-glyphs-scripts" target="_blank">GitHub repository</a></p>
       <p>Python scripts for the Glyphs font editor<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/glyphs-scripts" target="_blank">GitHub repository</a></p>
   </section>
