--- a/reading/index.html
+++ b/reading/index.html
@@ -39,6 +39,7 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>La daga</em></strong> de Philip Pullman</li>
+      <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
       <li><em><strong>Luces del norte</em></strong> de Philip Pullman 💙</li>
       <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
       <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
