--- a/reading/index.html
+++ b/reading/index.html
@@ -38,6 +38,7 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
+      <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
       <li><em><strong>La daga</em></strong> de Philip Pullman</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
       <li><em><strong>Luces del norte</em></strong> de Philip Pullman 💙</li>
