https links update

--- a/about/index.html
+++ b/about/index.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="About — Pedro Arilla"/>
 	<meta property="og:description" content="Information about Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://pedroarilla.com/about"/>
-	<meta property="og:image" content="http://pedroarilla.com/pedroarilla.jpg"/>
+	<meta property="og:url" content="https://pedroarilla.com/about"/>
+	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
-  <link rel="shortcut icon" type="image/png" href="http://pedroarilla.com/pedroarilla.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
   <section class="menu">
@@ -30,7 +30,7 @@
     <h1><strong>About</strong></h1>
     <p>I was born in 1984 in Ejea de los Caballeros (Spain). I am currently living in <del>Ejea</del>, <del>Zaragoza</del>, <del>Reading</del>, London with Cris (wifey) and Bunbury (🐶). I love reading and writing — but also 🤘, 🏀 and 🌴.</p>
     <img src="rsc/pedroarilla.jpg">
-    <p style="font-size: .75em;">Photo by <a href="http://www.xoelburgues.com/" target="_blank">Xoel Burgués</a> (Zaragoza, 2017).</p>
+    <p style="font-size: .75em;">Photo by <a href="https://www.xoelburgues.com/" target="_blank">Xoel Burgués</a> (Zaragoza, 2017).</p>
   </section>
   <section class="data" id="contact">
     <h2>Contact</h2>
@@ -43,10 +43,10 @@
   <section class="data" id="social">
     <h2>Social</h2>
     <ul>
-      <li><a href="http://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a></li>
-      <li><a href="http://facebook.com/pedroarillacortes" rel="me" target="_blank" title="Facebook Pedro Arilla's profile">Facebook</a></li>
-      <li><a href="http://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a></li>
-      <li><a href="http://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></li>
+      <li><a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a></li>
+      <li><a href="https://facebook.com/pedroarillacortes" rel="me" target="_blank" title="Facebook Pedro Arilla's profile">Facebook</a></li>
+      <li><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></li>
       <li><a href="https://open.spotify.com/user/pedroarilla" rel="me" target="_blank" title="Spotify Pedro Arilla's profile">Spotify</a></li>
       <li><a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
     </ul>
