--- a/code/index.html
+++ b/code/index.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="Coding — Pedro Arilla"/>
 	<meta property="og:description" content="Coding projects by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://pedroarilla.com/code"/>
-	<meta property="og:image" content="http://pedroarilla.com/pedroarilla.jpg"/>
+	<meta property="og:url" content="https://pedroarilla.com/code"/>
+	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link type="text/css" rel="stylesheet" href="../style.css">
   <link type="text/plain" rel="author" href="../humans.txt" />
-  <link rel="shortcut icon" type="image/png" href="http://pedroarilla.com/pedroarilla.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
 </head>
 <body>
   <section class="menu">
