--- a/reading/index.html
+++ b/reading/index.html
@@ -39,7 +39,7 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>El catalejo lacado</em></strong> de Philip Pullman</li>
-      <li><em><strong>Bestiario</em></strong> de Julio Cortázar 💙</li>
+      <li><em><strong>Bestiario</em></strong> de Julio Cortázar</li>
       <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
       <li><em><strong>La daga</em></strong> de Philip Pullman</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
