--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </ul>
   </section>
   <section class="presentation">
-    <h1><strong>¡Hola! I’m Pedro Arilla</strong>, a designer from Spain, working as Creative Director at <a href="https://fontsmith.com" target="_blank">Fontsmith</a> and living in London (UK).</h1>
-    <p>I design <a href="./fonts">typefaces</a>, write <a href="./texts">about type</a>, teach workshops and give lectures about it — and <a href="./code">code</a> for fun. I hold an MA Typeface Design from the University of Reading (graduating with distinction), host one of the main publications on typography in the Spanish language (<a href="https://donserifa.com" target="_blank">Don Serifa</a>), organise and teach a one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>), and <a href="./reading">read</a> in the meantime.<p>
+    <h1><strong>¡Hola! I’m Pedro Arilla</strong>, a designer from Spain, working as Creative Type Director at <a href="https://monotype.com/" target="_blank">Monotype</a> and living in London (UK).</h1>
+    <p>I design <a href="./fonts">typefaces</a>, write <a href="./texts">about type</a>, teach workshops and give lectures about it — and <a href="./code">code</a> for fun. I hold an MA Typeface Design from the University of Reading (graduating with distinction), host one of the main publications on typography in the Spanish language (<a href="https://donserifa.com" target="_blank">Don Serifa</a>), organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>), and <a href="./reading">read</a> in the meantime.<p>
     <p>My non-type-related-background includes experience as an editorial and branding Art Director, a dark past as a programmer, a darker past as an editor of a metal music webzine, a few high-school fanzines, travels around the world with a wedding in Las Vegas included, a dog called Bunbury, an unfinished novel, dozens of poems, and hundreds of books on my shelves.</p>
   </section>
   <section class="data" id="the-end">
