--- a/about/index.html
+++ b/about/index.html
@@ -121,10 +121,14 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
-      <li><strong>Eurobest Award 2019</strong>, Bronze  for <em>Amsteldok</em>.</li>
+      <li><strong>TypeToday 2020</strong>, Typefaces with perfect Cyrillic for <em>FS Brabo Pro</em>.</li>
+      <li><strong>Transform Awards Europe 2020</strong>, Silver for <em>Amsteldok</em>.</li>
+      <li><strong>WPPED Cream Awards 2019</strong>, Winner for <em>Amsteldok</em>.</li>
+      <li><strong>Brand Impact Awards 2019</strong>, Highly Commended for <em>Amsteldok</em>.</li>
+      <li><strong>Eurobest Award 2019</strong>, Bronze for <em>Amsteldok</em>.</li>
       <li><strong>Granshan 2019</strong>, Special Mention Cyrillic-Latin for <em>FS Brabo Pro</em>.</li>
       <li><strong>Communication Arts 2019</strong>, Shortlisted for <em>Amsteldok</em>.</li>
-      <li><strong>Cio Awards 2019</strong>, Bronze for <em>Amsteldok</em>.</li>
+      <li><strong>Clio Awards 2019</strong>, Bronze for <em>Amsteldok</em>.</li>
       <li><strong>Cannes Lions 2019</strong>, Shortlisted for <em>Amsteldok</em>.</li>
       <li><strong>European Design Awards 2019</strong>, Silver for <em>FS Neruda</em>.</li>
       <li><strong>Modern Cyrillic 2019</strong>, one of the winners for <em>FS Brabo Pro</em>.</li>
