--- a/reading/index.html
+++ b/reading/index.html
@@ -38,7 +38,9 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>El valor de educar</em></strong> de Fernando Savater ❤️</li>
+      <li><em><strong>La herencia viva de los clásicos</em></strong> de Mary Beard</li>
+      <li><em><strong>La cara norte del corazón</em></strong> de Dolores Redondo</li>
+      <li><em><strong>El valor de educar</em></strong> de Fernando Savater 💙</li>
       <li><em><strong>El catalejo lacado</em></strong> de Philip Pullman</li>
       <li><em><strong>Bestiario</em></strong> de Julio Cortázar</li>
       <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
