--- a/reading/rating.html
+++ b/reading/rating.html
@@ -43,22 +43,45 @@
       <li><a href="./rating.html">by rating</a></li>
     </ul>
   </section>
-  <section class="data" id="books-2020">
-    <h2>2020</h2>
+  <section class="data">
+    <h2>Rated with ❤️</h2>
     <ul>
-      <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo ❤️</li>
-      <li><em><strong>Clases de literatura</em></strong> de Julio Cortázar</li>
-      <li><em><strong>La cara norte del corazón</em></strong> de Dolores Redondo</li>
-      <li><em><strong>La herencia viva de los clásicos</em></strong> de Mary Beard</li>
-      <li><em><strong>El valor de educar</em></strong> de Fernando Savater 💙</li>
-      <li><em><strong>El catalejo lacado</em></strong> de Philip Pullman</li>
-      <li><em><strong>Bestiario</em></strong> de Julio Cortázar</li>
-      <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
-      <li><em><strong>La daga</em></strong> de Philip Pullman</li>
-      <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
-      <li><em><strong>Luces del norte</em></strong> de Philip Pullman 💙</li>
-      <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
-      <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
+      <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo</li>
+      <li><em><strong>Pelea como una chica</em></strong> de Sandra Sabatés</li>
+      <li><em><strong>El Director</em></strong> de David Jiménez</li>
+      <li><em><strong>Mientras escribo</em></strong> de Stephen King</li>
+    </ul>
+  </section>
+  <section class="data">
+    <h2>Rated with 💙</h2>
+    <ul>
+      <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
+      <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
+      <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
+      <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill</li>
+      <li><em><strong>Elevation</em></strong> by Stephen King</li>
+      <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton</li>
+      <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado</li>
+      <li><em><strong>The Colorado Kid</em></strong> by Stephen King</li>
+      <li><em><strong>El cuento de la criada</em></strong> de Margaret Atwood</li>
+      <li><em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser</li>
+      <li><em><strong>Ser mujer negra en España</em></strong> de Desirée Bela-Lobedde</li>
+      <li><em><strong>La escritura transparente</em></strong> de William Lyon</li>
+      <li><em><strong>Ruined by design</em></strong> by Mike Monteiro</li>
+      <li><em><strong>El problema de los tres cuerpos</em></strong> de Liu Cixin</li>
+      <li><em><strong>Joyland</em></strong> by Stephen King</li>
+      <li><em><strong>Do Design</em></strong> by Alan Moore</li>
+      <li><em><strong>Reina Roja</em></strong> de Juan Gómez-Jurado</li>
+      <li><em><strong>Secretos a contraluz</em></strong> de Gonzalo Vázquez</li>
+      <li><em><strong>Brief answers to the big questions</em></strong> by Stephen Hawking</li>
+      <li><em><strong>El sueño de mi desvelo</em></strong> de Antoni Daimiel</li>
+    </ul>
+  </section>
+  <section class="data">
+    <h2>Rated with 💕</h2>
+    <ul>
+      <li><em><strong>Maus</em></strong> by Art Spiegelman</li>
+      <li><em><strong>Persepolis</em></strong> by Marjane Satrapi</li>
     </ul>
   </section>
   <section class="data" id="the-end">
