--- a/reading/index.html
+++ b/reading/index.html
@@ -46,6 +46,8 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
+      <li><em><strong>Desaigning books</em></strong> by Jost Hochuli 💙</li>
+      <li><em><strong>Detail in typography</em></strong> by Jost Hochuli 💕</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo ❤️</li>
       <li><em><strong>Clases de literatura</em></strong> de Julio Cortázar</li>
       <li><em><strong>La cara norte del corazón</em></strong> de Dolores Redondo</li>
