--- a/reading/rating.html
+++ b/reading/rating.html
@@ -55,6 +55,7 @@
   <section class="data">
     <h2>Rated with 💙</h2>
     <ul>
+      <li><em><strong>Desaigning books</em></strong> by Jost Hochuli</li>
       <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
       <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
@@ -80,6 +81,7 @@
   <section class="data">
     <h2>Rated with 💕</h2>
     <ul>
+      <li><em><strong>Detail in typography</em></strong> by Jost Hochuli</li>
       <li><em><strong>Maus</em></strong> by Art Spiegelman</li>
       <li><em><strong>Persepolis</em></strong> by Marjane Satrapi</li>
     </ul>
