--- a/reading/rating.html
+++ b/reading/rating.html
@@ -55,7 +55,7 @@
   <section class="data">
     <h2>Rated with 💙</h2>
     <ul>
-      <li><em><strong>Desaigning books</em></strong> by Jost Hochuli</li>
+      <li><em><strong>Designing books</em></strong> by Jost Hochuli</li>
       <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
       <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
