--- a/about/index.html
+++ b/about/index.html
@@ -83,6 +83,7 @@
   <section class="data" id="talks">
     <h2>Talks</h2>
     <ul>
+      <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> MálagaType, Málaga, Spain, 2019.</li>
       <li><strong>Amsteldok.</strong> Letterspace, Amsterdam, The Netherlands, 2019.</li>
       <li><strong>Lost & Foundry.</strong> The Galley Club, London, United Kingdom, 2019.</li>
@@ -120,6 +121,7 @@
   <section class="data" id="awards">
     <h2>Awards</h2>
     <ul>
+      <li><strong>European Design Awards 2020</strong>, Gold for <em>Amsteldok</em>.</li>
       <li><strong>TypeToday 2020</strong>, Typefaces with perfect Cyrillic for <em>FS Brabo Pro</em>.</li>
       <li><strong>Transform Awards Europe 2020</strong>, Silver for <em>Amsteldok</em>.</li>
       <li><strong>WPPED Cream Awards 2019</strong>, Winner for <em>Amsteldok</em>.</li>
@@ -156,8 +158,8 @@
       <li><em>MyFonts Rising Stars</em></li>
       <li><em>Domestika</em></li>
       <li><em>Gràffica</em></li>
-      <li><em>Unos tipos duros</em></li>
       <li><em>Rayitas Azules</em></li>
+      <li><em>Unos tipos duros</em></li>
       <li><em>Monográfica</em></li>
       <li><em>Neo2</em></li>
       <li><em>Televisión Española</em></li>
@@ -166,7 +168,7 @@
     </ul>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
