--- a/code/index.html
+++ b/code/index.html
@@ -33,7 +33,7 @@
       <p>Python scripts for the Glyphs font editor<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/glyphs-scripts" target="_blank">GitHub repository</a></p>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
