--- a/reading/index.html
+++ b/reading/index.html
@@ -46,6 +46,8 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
+      <li><em><strong>Malos de la historia de España</em></strong> de G. Cardona y J. C. Losada</li>
+      <li><em><strong>La peste</em></strong> de Albert Camus</li>
       <li><em><strong>Designing books</em></strong> by Jost Hochuli 💙</li>
       <li><em><strong>Detail in typography</em></strong> by Jost Hochuli 💕</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo ❤️</li>
@@ -64,7 +66,7 @@
     </ul>
   </section>
   <section class="data" id="the-end">
-    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla. &rarr; <a href="mailto:info@pedroarilla.com">Email me</a> or follow me on <a href="https://twitter.com/pedroarilla" target="_blank">TW</a> & <a href="https://instagram.com/pedroarilla" target="_blank">IG</a>.</p>
+    <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
