--- a/about/index.html
+++ b/about/index.html
@@ -50,9 +50,33 @@
       <li><a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
     </ul>
   </section>
+  <section class="data" id="talks">
+    <h2>Talks</h2>
+    <ul>
+      <li><strong>Narrativa tipográfica.</strong> Creatus Dominus, online, 2020.</li>
+      <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
+      <li><strong>Narrativa tipográfica.</strong> MálagaType, Málaga, Spain, 2019.</li>
+      <li><strong>Amsteldok.</strong> Letterspace, Amsterdam, The Netherlands, 2019.</li>
+      <li><strong>Lost & Foundry.</strong> The Galley Club, London, United Kingdom, 2019.</li>
+      <li><strong>Lost & Foundry.</strong> TypeThursdayLON, London, United Kingdom, 2018.</li>
+      <li><strong>Lost & Foundry.</strong> The House of St Barnabas, London, United Kingdom, 2018.</li>
+      <li><strong>Tipografilias y tipopatías.</strong> Creatus Dominus, Sant Cugat del Vallès, Spain, 2015.</li>
+      <li><strong>Tipografía y poesía.</strong> TransSocial Express, Zaragoza, Spain, 2015.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> XIV Salón del Diseño Gráfico, Barranquilla, Colombia, 2014.</li>
+      <li><strong>Cuarto de tipo: Pedro Arilla.</strong> VI Congreso de Tipografía, Valencia, Spain, 2014.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> II Jornadas Tipográficas, Granada, Spain, 2014.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> TypoMad, Madrid, Spain, 2013.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Entretipos, Barcelona, Spain, 2013.</li>
+      <li><strong>Claves para dar el salto del aula al proyecto real.</strong> Ibercaja Zentrum, Zaragoza, Spain, 2013.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> IES Pilar Lorengar, Zaragoza, Spain, 2013.</li>
+      <li><strong>¿Se puede vivir de la tipografía?</strong> Sevilla Design Walk, Sevilla, Spain, 2012.</li>
+      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
+    </ul>
+  </section>
   <section class="data" id="teaching">
     <h2>Teaching</h2>
     <ul>
+      <li><strong>Type design.</strong> Type Crit Crew, online, <a href="https://medium.com/@juan_kafka/type-crit-crew-fdd180b881c" target="_blank">link</a>, 2020–.</li>
       <li><strong>Type design.</strong> V Glíglifo, Sos del Rey Católico, Spain, 2018.</li>
       <li><strong>Type design.</strong> Tristana Project, Zaragoza, Spain, 2018.</li>
       <li><strong>Type design.</strong> IV Glíglifo, Sos del Rey Católico, Spain, 2017.</li>
@@ -78,28 +102,6 @@
       <li><strong>Fonts &amp; Branding.</strong> Made in Zaragoza, Zaragoza, Spain, 2013.</li>
       <li><strong>Type design with Glyphs.</strong> Entretipos, Barcelona, Spain, 2013.</li>
       <li><strong>Editorial design.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
-    </ul>
-  </section>
-  <section class="data" id="talks">
-    <h2>Talks</h2>
-    <ul>
-      <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
-      <li><strong>Narrativa tipográfica.</strong> MálagaType, Málaga, Spain, 2019.</li>
-      <li><strong>Amsteldok.</strong> Letterspace, Amsterdam, The Netherlands, 2019.</li>
-      <li><strong>Lost & Foundry.</strong> The Galley Club, London, United Kingdom, 2019.</li>
-      <li><strong>Lost & Foundry.</strong> TypeThursdayLON, London, United Kingdom, 2018.</li>
-      <li><strong>Lost & Foundry.</strong> The House of St Barnabas, London, United Kingdom, 2018.</li>
-      <li><strong>Tipografilias y tipopatías.</strong> Creatus Dominus, Sant Cugat del Vallès, Spain, 2015.</li>
-      <li><strong>Tipografía y poesía.</strong> TransSocial Express, Zaragoza, Spain, 2015.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> XIV Salón del Diseño Gráfico, Barranquilla, Colombia, 2014.</li>
-      <li><strong>Cuarto de tipo: Pedro Arilla.</strong> VI Congreso de Tipografía, Valencia, Spain, 2014.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> II Jornadas Tipográficas, Granada, Spain, 2014.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> TypoMad, Madrid, Spain, 2013.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Entretipos, Barcelona, Spain, 2013.</li>
-      <li><strong>Claves para dar el salto del aula al proyecto real.</strong> Ibercaja Zentrum, Zaragoza, Spain, 2013.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> IES Pilar Lorengar, Zaragoza, Spain, 2013.</li>
-      <li><strong>¿Se puede vivir de la tipografía?</strong> Sevilla Design Walk, Sevilla, Spain, 2012.</li>
-      <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
     </ul>
   </section>
   <section class="data" id="exhibitions">
