--- a/reading/2019.html
+++ b/reading/2019.html
@@ -32,7 +32,7 @@
     <p>
     💙 means I very recommend it.<br>
     ❤️ means FUCKING WOW.<br>
-    💕 means I re-read this book — so probably quite wow.
+    💕 means I re-read this book — so probably “quite wow”.
     </p>
   </section>
   <section class="menu">
