--- a/reading/index.html
+++ b/reading/index.html
@@ -32,7 +32,7 @@
     <p>
     💙 means I very recommend it.<br>
     ❤️ means FUCKING WOW.<br>
-    💕 means I re-read this book — so probably quite wow.
+    💕 means I re-read this book — so probably “quite wow”.
     </p>
   </section>
   <section class="menu">
@@ -46,9 +46,17 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Malos de la historia de España</em></strong> de G. Cardona y J. C. Losada</li>
+      <li><em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples 💙</li>
+      <li><em><strong>The shape of design</em></strong> by Frank Chimero</li>
+      <li><em><strong>Locke & Key: Alpha & Omega</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Locke & Key: Clockworks</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Locke & Key: Keys to the Kingdom</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández 💕</li>
+      <li><em><strong>Locke & Key: Crown of shadows</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Locke & Key: Head games</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Locke & Key: Welcome to Lovecraft</em></strong> by Joe Hill and Gabriel Rodríguez</li>
       <li><em><strong>La peste</em></strong> de Albert Camus</li>
-      <li><em><strong>Designing books</em></strong> by Jost Hochuli 💙</li>
+      <li><em><strong>Designing books</em></strong> by Jost Hochuli</li>
       <li><em><strong>Detail in typography</em></strong> by Jost Hochuli 💕</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo ❤️</li>
       <li><em><strong>Clases de literatura</em></strong> de Julio Cortázar</li>
