--- a/reading/rating.html
+++ b/reading/rating.html
@@ -32,7 +32,7 @@
     <p>
     💙 means I very recommend it.<br>
     ❤️ means FUCKING WOW.<br>
-    💕 means I re-read this book — so probably quite wow.
+    💕 means I re-read this book — so probably “quite wow”.
     </p>
   </section>
   <section class="menu">
@@ -55,7 +55,7 @@
   <section class="data">
     <h2>Rated with 💙</h2>
     <ul>
-      <li><em><strong>Designing books</em></strong> by Jost Hochuli</li>
+      <li><em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
       <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
       <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
@@ -81,6 +81,7 @@
   <section class="data">
     <h2>Rated with 💕</h2>
     <ul>
+      <li><em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández</li>
       <li><em><strong>Detail in typography</em></strong> by Jost Hochuli</li>
       <li><em><strong>Maus</em></strong> by Art Spiegelman</li>
       <li><em><strong>Persepolis</em></strong> by Marjane Satrapi</li>
