--- a/reading/2019.html
+++ b/reading/2019.html
@@ -50,17 +50,18 @@
       <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill 💙</li>
       <li><em><strong>Easy go</em></strong> by Michael Crichton</li>
       <li><em><strong>Elevation</em></strong> by Stephen King 💙</li>
-      <li><em><strong>Invincible (no. 50–100)</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
+      <li><em><strong>Invincible</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
+      <li>&emsp;&rarr; no. 1–100</li>
       <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton 💙</li>
       <li><em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado 💙</li>
       <li><em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
       <li><em><strong>Guía Gigantes NBA 2019-20</em></strong> de Andrés Monje</li>
       <li><em><strong>Why I write</em></strong> by George Orwell</li>
       <li><em><strong>The Colorado Kid</em></strong> by Stephen King 💙</li>
-      <li><em><strong>Dr. Stone (no. 1–16)</em></strong> by Riichiro Inagaki and Boichi</li>
+      <li><em><strong>Dr. Stone</em></strong> by Riichiro Inagaki and Boichi</li>
+      <li>&emsp;&rarr; no. 1–16</li>
       <li><em><strong>El cuento de la criada</em></strong> de Margaret Atwood 💙</li>
       <li><em><strong>The debate</em></strong> by Wim Crouwel and Jan van Toorn</li>
-      <li><em><strong>Invincible (no. 1–50)</em></strong> by Robert Kirkman, Cory Walker et al.</li>
       <li><em><strong>El cine segun Hitchcock</em></strong> de François Truffaut</li>
       <li><em><strong>Useful work v. Useless toil</em></strong> by William Morris</li>
       <li><em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser 💙</li>
@@ -86,7 +87,8 @@
       <li><em><strong>Of women in the twenty-first century</em></strong> by Shami Chakrabarti</li>
       <li><em><strong>Fahrenheit 451</em></strong> de Ray Bradbury</li>
       <li><em><strong>Una lengua muy muy larga</em></strong> de Lola Pons</li>
-      <li><em><strong>The Umbrella Academy: Apocalypse Suite</em></strong> by Gerard Way and Gabriel Bá</li>
+      <li><em><strong>The Umbrella Academy</em></strong> by Gerard Way and Gabriel Bá</li>
+      <li>&emsp;&rarr; Apocalypse Suite</li>
       <li><em><strong>Groucho y yo</em></strong> de Groucho Marx</li>
       <li><em><strong>Secretos a contraluz</em></strong> de Gonzalo Vázquez 💙</li>
       <li><em><strong>Wabi-Sabi: For Artists, Designers, Poets & Philosophers</em></strong> by Leonard Koren</li>
