--- a/reading/index.html
+++ b/reading/index.html
@@ -46,15 +46,19 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples 💙</li>
+      <li><em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples 💙</li>
+      <li>&emsp;&rarr; Book One</li>
+      <li>&emsp;&rarr; Book Two</li>
+      <li>&emsp;&rarr; Book Three</li>
       <li><em><strong>The shape of design</em></strong> by Frank Chimero</li>
-      <li><em><strong>Locke & Key: Alpha & Omega</em></strong> by Joe Hill and Gabriel Rodríguez</li>
-      <li><em><strong>Locke & Key: Clockworks</em></strong> by Joe Hill and Gabriel Rodríguez</li>
-      <li><em><strong>Locke & Key: Keys to the Kingdom</em></strong> by Joe Hill and Gabriel Rodríguez</li>
       <li><em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández 💕</li>
-      <li><em><strong>Locke & Key: Crown of shadows</em></strong> by Joe Hill and Gabriel Rodríguez</li>
-      <li><em><strong>Locke & Key: Head games</em></strong> by Joe Hill and Gabriel Rodríguez</li>
-      <li><em><strong>Locke & Key: Welcome to Lovecraft</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li><em><strong>Locke & Key</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li>&emsp;&rarr; Welcome to Lovecraft</li>
+      <li>&emsp;&rarr; Head Games</li>
+      <li>&emsp;&rarr; Crown of Shadows</li>
+      <li>&emsp;&rarr; Keys to the Kingdom</li>
+      <li>&emsp;&rarr; Clockworks</li>
+      <li>&emsp;&rarr; Alpha & Omega</li>
       <li><em><strong>La peste</em></strong> de Albert Camus</li>
       <li><em><strong>Designing books</em></strong> by Jost Hochuli</li>
       <li><em><strong>Detail in typography</em></strong> by Jost Hochuli 💕</li>
@@ -68,7 +72,10 @@
       <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
       <li><em><strong>La daga</em></strong> de Philip Pullman</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
-      <li><em><strong>Luces del norte</em></strong> de Philip Pullman 💙</li>
+      <li><em><strong>La materia oscura</em></strong> de Philip Pullman 💙</li>
+      <li>&emsp;&rarr; Luces del norte</li>
+      <li>&emsp;&rarr; La daga</li>
+      <li>&emsp;&rarr; El catalejo lacado</li>
       <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
       <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
     </ul>
