--- a/reading/rating.html
+++ b/reading/rating.html
@@ -55,10 +55,16 @@
   <section class="data">
     <h2>Rated with 💙</h2>
     <ul>
-      <li><em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+      <li><em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+      <li>&emsp;&rarr; Book One</li>
+      <li>&emsp;&rarr; Book Two</li>
+      <li>&emsp;&rarr; Book Three</li>
       <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
-      <li><em><strong>Luces del norte</em></strong> de Philip Pullman</li>
+      <li><em><strong>La materia oscura</em></strong> de Philip Pullman</li>
+      <li>&emsp;&rarr; Luces del norte</li>
+      <li>&emsp;&rarr; La daga</li>
+      <li>&emsp;&rarr; El catalejo lacado</li>
       <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill</li>
       <li><em><strong>Elevation</em></strong> by Stephen King</li>
       <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton</li>
