--- a/reading/2019.html
+++ b/reading/2019.html
@@ -31,8 +31,8 @@
     <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book on this list.</p>
     <p>
     💙 means I very recommend it.<br>
-    ❤️ means FUCKING WOW.<br>
-    💕 means I re-read this book — so probably “quite wow”.
+    ❤️ means FREAKIN’ WOW.<br>
+    💕 means I re-read this book — so potentially “wow-WOW”.
     </p>
   </section>
   <section class="menu">
